--- a/projects/myblitz/about/css/style.css
+++ b/projects/myblitz/about/css/style.css
@@ -6,6 +6,7 @@ html, body{
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 16px;
 	color: #474747;
+	background-color: #fefefe;
 }
 
 h1,h2,h3,h4,h5,h6, .title {
@@ -153,7 +154,7 @@ p {
 	}
 
 	.about-us-header {
-		font-size: 3em;
+		font-size: 2.5em;
 		margin-bottom: 0;
 	}
 
@@ -216,29 +217,14 @@ p {
 /* ==========================================================================
    		PORTFOLIO
 ========================================================================== */
-.staff {
-	position: relative;
-}
-
-.staff .title-wrapper {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	text-align: center;
-}
-
-.staff h2 {
-	display: inline;
-	background: #fff;
-	padding: 0.8em;
-}
-
 .work {
 	float: left;
-	width: 31.5%;
-	margin-right: 2.5%;
+	width: 32%;
+	margin-right: 2%;
 	margin-bottom: 2.4rem;
+	border: 2px solid #f8f8f8;
+	background-color: white;
+	position: relative;
 	}
 
 	.work:last-child {
@@ -253,13 +239,33 @@ p {
 		width: 100%;
 	}
 
+.staff-info{
+	padding: 0 15px 20px 15px;
+}
+
+.staff-number p {
+	margin: 0;
+	float: right;
+}
+
+.staff-number h3 {
+	font-weight: bold;
+	margin: 0;
+}
+
+.staff-job {
+	text-transform: uppercase;
+	font-size: 0.9em;
+	color: #949393;
+	margin-top: 5px;
+	margin-bottom: 20px;
+	font-weight: bold;
+}
+
 
 /* ==========================================================================
        FOOTER
 ========================================================================== */
-
-
-
 
 .page-footer:before {
 	content: " "; /* empty space */
