--- a/projects/014.gridbiz/style.css
+++ b/projects/014.gridbiz/style.css
@@ -21,12 +21,17 @@ body {
 
 button {
     background: var(--primary);
+    box-shadow: var(--shadow);
     border: 0;
     padding: 0.8rem 2rem;
     font-size: 20px;
     text-transform: uppercase;
     font-size: 1.1rem;
-    box-shadow: var(--shadow);
+}
+
+button:hover {
+    color: var(--light);
+    background-color: var(--dark);
 }
 
 .btn {
@@ -74,7 +79,7 @@ img {
 }
 
 .main-nav a:hover {
-    background: var(--primary);
+    background-color: var(--dark);
     color: var(--light);
 }
 
@@ -119,6 +124,11 @@ img {
     font-size: 1.3rem;
     margin-top: 0;
     color: var(--light);
+}
+
+.showcase>a:hover {
+    color: var(--dark);
+    background-color: var(--primary);
 }
 
 
