020.Nexter.80per.done
footer, features and nav done! working on moving the sidebar to the top on a small screen size.

--- a/projects/020.Nexter/sass/_base.scss
+++ b/projects/020.Nexter/sass/_base.scss
@@ -11,6 +11,9 @@ $font-primary: 'Nunito',
 sans-serif;
 $font-display: 'Josefin Sans',
 sans-serif;
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 75em; // 1200px
+$bp-large: 62.5em; // 1000px
 *,
 *::before,
 *::after {
@@ -23,6 +26,9 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     //10px/16px = 62.5% -> 1rem = 10px
+    @media only screen and (max-width: $bp-largest) {
+        font-size: 50%;
+    }
 }
 
 body {
@@ -41,4 +47,8 @@ body {
     //     padding: 40px;
     //     font-size: 3rem;
     // }
+    @media only screen and (max-width: $bp-large) {
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    }
 }
