--- a/projects/020.Nexter/sass/_sidebar.scss
+++ b/projects/020.Nexter/sass/_sidebar.scss
@@ -6,7 +6,9 @@
     justify-content: center;
     @media only screen and (max-width: $bp-large) {
         grid-column: 1 / -1;
-        grid-row: 1 / 2;
+        grid-row: 1 / 1;
+        justify-content: flex-end;
+        align-items: center;
     }
 }
 
@@ -30,5 +32,15 @@
     }
     &::after {
         transform: translateY(1.5rem);
+    }
+    @media only screen and (max-width: $bp-large) {
+        margin-top: 0;
+        margin-right: 3rem;
+        &::before {
+            transform: translateY(-1.2rem);
+        }
+        &::after {
+            transform: translateY(1rem);
+        }
     }
 }
