--- a/projects/miscalleneous/learningJS/quizApp1/style.css
+++ b/projects/miscalleneous/learningJS/quizApp1/style.css
@@ -1,8 +1,41 @@
+/* box sizing will make the widths and heights easier to style */
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+:root {
+    --hue-neutral: 200;
+    --hue-wrong: 0;
+    --hue-correct: 145;
+}
 
-/* this will make the widths and heights easier to style */
+body {
+    --hue: var(--hue-neutral);
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    background-color: hsl(var(--hue), 100%, 20%);
+}
+
+body.correct {
+    --hue: var(--hue-correct);
+}
+
+body.wrong {
+    --hue: var(--hue-wrong);
+}
+
+.container {
+    width: 800px;
+    max-width: 80%;
+    /* max width 80% so that the content doesn't overflow the page */
+}
