--- a/projects/miscalleneous/learningJS/quizApp1/style.css
+++ b/projects/miscalleneous/learningJS/quizApp1/style.css
@@ -46,7 +46,7 @@ body.wrong {
 
 .btn-grid {
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 10px;
     margin: 20px 0;
 }
