--- a/projects/023.quizApps/quiz-level-1/style.css
+++ b/projects/023.quizApps/quiz-level-1/style.css
@@ -77,6 +77,10 @@ body {
     cursor: pointer;
 }
 
+.options div.disabled {
+    pointer-events: none;
+}
+
 .options div.wrong {
     z-index: 1;
     color: #fff;
