--- a/projects/023.quizApps/quiz-level-1/style.css
+++ b/projects/023.quizApps/quiz-level-1/style.css
@@ -176,3 +176,45 @@ body {
     background-repeat: no-repeat;
     background-size: 60%;
 }
+
+.quiz-over {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 10;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.quiz-over .show {
+    display: flex;
+}
+
+.quiz-over .box {
+    background-color: #009688;
+    padding: 3rem;
+    border-radius: 1rem;
+    text-align: center;
+    flex-basis: 70rem;
+    max-width: 70rem;
+    color: #fff;
+}
+
+.quiz-over .box h1 {
+    font-size: 3.6rem;
+    margin: 0 0 2rem;
+}
+
+.quiz-over .box button {
+    padding: 1.5rem 5rem;
+    border: none;
+    background-color: #FF9800;
+    border-radius: 0.5rem;
+    font-size: 1.6rem;
+    margin: 1.5rem 0 2rem;
+    color: #fff;
+}
