--- a/projects/021.js-60-projects/07-testimonials/style.css
+++ b/projects/021.js-60-projects/07-testimonials/style.css
@@ -7,13 +7,12 @@ body {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     min-height: 95vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/questionBcg.jpeg')center/cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/questionBcg.jpeg')center/cover no-repeat fixed;
 }
 
 .container {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    max-width: 33rem;
+    max-width: 646px;
+    color: white;
 }
 
 .row {
@@ -31,13 +30,17 @@ body {
     font-weight: 600;
     margin: 0;
     font-size: 2.5rem;
-    color: white;
 }
 
 .quotes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     border-radius: 5px;
     position: relative;
     border: 0.05rem solid white;
+    padding: 22px;
 }
 
 .btn {
@@ -72,5 +75,6 @@ body {
 
 .btn:hover {
     background: green;
+    cursor: pointer;
     color: white;
 }
