--- a/projects/021.js-60-projects/07-testimonials/style.css
+++ b/projects/021.js-60-projects/07-testimonials/style.css
@@ -37,10 +37,15 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
     border-radius: 5px;
     position: relative;
     border: 0.05rem solid white;
     padding: 22px;
+}
+
+.stars {
+    width: 100px;
 }
 
 .btn {
@@ -52,6 +57,15 @@ body {
     border-radius: 50%;
     box-shadow: 2px 5px black;
     outline: none;
+}
+
+.bigQuote {
+    margin: 0;
+    font-size: 9rem;
+    color: #FFC244;
+    margin-bottom: -100px;
+    letter-spacing: -20px;
+    transform: rotateX(3.142rad);
 }
 
 .prevBtn {
