--- a/projects/015.CodePen/style.css
+++ b/projects/015.CodePen/style.css
@@ -1,23 +1,23 @@
 :root {
-  --grey: #343436;
+    --grey: #343436;
 }
+
 html {
-  box-sizing: border-box;
-  font-family: "Lato", "Lucida Grande", "Lucida Sans Unicode", Tahoma,
-    Sans-Serif;
-  font-weight: normal;
-  color: #272727;
-  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
+    box-sizing: border-box;
+    font-family: "Lato", "Lucida Grande", "Lucida Sans Unicode", Tahoma, Sans-Serif;
+    font-weight: normal;
+    color: #272727;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 h1,
@@ -26,112 +26,115 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: normal;
-  margin: 0;
-  font-size: 1.5em;
+    font-weight: normal;
+    margin: 0;
+    font-size: 1.5em;
 }
 
 .codepen {
-  display: grid;
-  grid-template-rows: auto 1fr 1fr auto;
-  height: 100vh;
-  color: white;
+    display: grid;
+    grid-template-rows: auto 1fr 1fr auto;
+    height: 100vh;
+    color: white;
 }
 
-.codepen >* {
-  border:1px solid black;
+.codepen>* {
+    border: 1px solid black;
 }
 
 
 /* Editor! */
+
 .code {
-  display:grid;
-  grid-template-columns: repeat(3, 1fr);
-  background: #1b2b34;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background: #1b2b34;
 }
 
 .editor {
-  display: grid;
-  grid-template-rows: auto 1fr;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 .editor__header {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  align-items: center;
-  padding: 5px;
-  grid-gap: 5px;
-  background: rgba(0,0,0,0.1);
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+    padding: 5px;
+    grid-gap: 5px;
+    background: rgba(0, 0, 0, 0.1);
 }
 
 .editor__code {
-  display: grid;
-  grid-template-columns: auto 1fr;
+    display: grid;
+    grid-template-columns: auto 1fr;
 }
 
 .editor__number {
-  display: block;
-  padding: 0 10px;
+    display: block;
+    padding: 0 10px;
 }
 
 .editor__input {
-  resize: none;
-  background: none;
-  border: 0;
-  color: grey;
-  font-size: 16px;
-  line-height: 19px;
+    resize: none;
+    background: none;
+    border: 0;
+    color: grey;
+    font-size: 16px;
+    line-height: 19px;
 }
+
 
 /* Pen Header */
 
 .pen {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-flow: column;
-  align-items: center;
-  grid-gap: 10px;
-  background: black;
-  border-bottom: 5px solid var(--grey);
-  color: white;
-  padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+    align-items: center;
+    grid-gap: 10px;
+    background: black;
+    border-bottom: 5px solid var(--grey);
+    color: white;
+    padding: 10px;
 }
 
 .preview {
-  display: grid;
+    display: grid;
+    grid-column: 1 / -1;
 }
+
 
 /* Buttons */
 
 .button {
-  background: var(--grey);
-  border: 0;
-  color: white;
-  padding: 10px;
-  border-radius:5px;
-  font-size: 15px;
-  position: relative;
+    background: var(--grey);
+    border: 0;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 15px;
+    position: relative;
 }
 
 .button--small {
-  font-size: 12px;
-  padding: 4px;
+    font-size: 12px;
+    padding: 4px;
 }
 
 .button--dirty:before {
-  background: #ffc600;
-  display: block;
-  content: '';
-  height: 2px;
-  width: calc(100% - 6px);
-  position: absolute;
-  left: 3px;
-  top: 3px;
+    background: #ffc600;
+    display: block;
+    content: '';
+    height: 2px;
+    width: calc(100% - 6px);
+    position: absolute;
+    left: 3px;
+    top: 3px;
 }
 
-
 .settings {
-  padding: 5px;
-  background: black;
-  border-top: 1px solid grey;
+    padding: 5px;
+    background: black;
+    border-top: 1px solid grey;
 }
