major portfolio update - created pics for js projects

--- a/projects/015.CodePen/style.css
+++ b/projects/015.CodePen/style.css
@@ -99,9 +99,10 @@ h6 {
     padding: 10px;
 }
 
-.preview {
+iframe {
     display: grid;
-    grid-column: 1 / -1;
+    width: 100%;
+    height: 100%;
 }
 
 
