--- a/projects/019.jsProjects/08-tipCalculator/style.css
+++ b/projects/019.jsProjects/08-tipCalculator/style.css
@@ -1,3 +1,9 @@
+*,
+ ::after,
+ ::before {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,7 +15,7 @@ body {
     background: #86BBD8;
     justify-content: center;
     align-content: center;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     min-height: 100vh;
     margin: 0;
 }
@@ -31,6 +37,7 @@ h3 {
 
 h5 {
     font-weight: 550;
+    margin-bottom: 8px;
 }
 
 .card-body {
@@ -51,6 +58,13 @@ h5 {
 .inputDiv {
     display: grid;
     grid-template-columns: 5rem 1fr;
+    font-size: 2rem;
+}
+
+input {
+    font-size: 2rem;
+    padding: 0 1rem;
+    color: #495057;
 }
 
 .service {
@@ -58,9 +72,17 @@ h5 {
     grid-template-columns: 1fr;
 }
 
+#select {
+    height: 4.8rem;
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    color: #495057;
+}
+
 .btn-container {
-    display: flex;
+    display: grid;
     justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 59rem));
 }
 
 #btn {
@@ -68,7 +90,17 @@ h5 {
     outline: none;
     align-self: center;
     padding: 1rem 5rem;
+    margin: 0 4rem;
     color: white;
+    border: 1px solid transparent;
     border-radius: .8rem;
     cursor: pointer;
+    font-size: 2rem;
+    border-radius: .7rem;
+}
+
+#btn:hover {
+    background: #86BBD8;
+    color: #212529;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
