--- a/projects/024.quizApps/quiz-level-2/style.css
+++ b/projects/024.quizApps/quiz-level-2/style.css
@@ -62,7 +62,9 @@ body {
 
 /* ------------ Section-2: Vocabulary--------------------- */
 
-.vocabulary {
+.vocabulary,
+.story,
+#quiz {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -71,7 +73,8 @@ body {
 
 .header,
 .start-header,
-.story-header {
+.storyHeader,
+#question {
     text-align: center;
     background: var(--lightGreen);
     color: white;
@@ -81,7 +84,9 @@ body {
 }
 
 .vidDiv,
-.start-body {
+.start-body,
+.storyVideo,
+.quizBody {
     color: #555555;
     grid-column: 1 / -1;
     background: white;
@@ -102,7 +107,8 @@ video {
 }
 
 .btn,
-.startBtn {
+.startBtn,
+.choice {
     color: white;
     outline: none;
     margin: .9rem;
@@ -124,26 +130,98 @@ video {
     transform: translateY(4px);
 }
 
-.storyBtn {
+.storyBtn,
+.quizBtn {
     grid-column: span 2;
     justify-self: center;
-    margin-top: 4rem;
+    margin-top: 2.5rem;
 }
 
 
 /* ------------ Section-3: Story--------------------- */
 
-
-/* -------vocabulary-quiz--------------------------- */
-
-#start {
-    background: lightcoral;
+.storyText {
+    font-size: 1rem;
 }
 
-#quiz {
-    background: lightseagreen;
+
+/* ------------ Section-4: Quiz--------------------- */
+
+#timer {
+    justify-self: center;
+    margin: 1rem 0.5rem;
+    width: 320px;
+    text-align: center;
 }
+
+#counter {
+    font-size: 2rem;
+    margin-bottom: .5rem;
+}
+
+#btimeGauge {
+    grid-column: 1 / -1;
+    height: .6rem;
+    border-radius: 1rem;
+    background-color: lightgray;
+}
+
+#timeGauge {
+    height: .6rem;
+    border-radius: 1rem;
+    background-color: var(--lightGreen);
+    width: 2rem;
+    margin-top: -10px;
+}
+
+.quizText {
+    font-size: 1.2rem;
+}
+
+#progress {
+    width: 2rem;
+    padding: 0 .5rem .5rem .5rem;
+    display: flex;
+}
+
+.prog {
+    width: 1rem;
+    height: 1rem;
+    border: 1px solid #555555;
+    border-radius: 50%;
+    padding: .5rem;
+    margin: .2rem;
+}
+
+
+/* ------------ score --------------------- */
 
 #score {
-    background: limegreen;
+    margin: 20px auto;
+    background-color: white;
+    opacity: 0.8;
+    height: 100px;
+    width: 100px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px 0px;
+    position: relative;
+    display: none;
+}
+
+#score img {
+    position: absolute;
+    top: 100px;
+    left: 325px;
+}
+
+#score p {
+    position: absolute;
+    display: block;
+    width: 59px;
+    height: 59px;
+    top: 130px;
+    left: 325px;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
 }
