--- a/projects/024.quizApps/quiz-level-2/style.css
+++ b/projects/024.quizApps/quiz-level-2/style.css
@@ -23,6 +23,7 @@ body {
     width: 360px;
     height: 640px;
     background: #e6e6e6;
+    position: relative;
 }
 
 .hide {
@@ -30,7 +31,7 @@ body {
 }
 
 
-/* ----------- Section 1 - Start --------------------------- */
+/* ----------- Section-1: Start --------------------------- */
 
 .start {
     font-size: 1rem;
@@ -64,7 +65,8 @@ body {
 
 .vocabulary,
 .story,
-#quiz {
+.quiz,
+.retell {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -74,11 +76,13 @@ body {
 .header,
 .start-header,
 .storyHeader,
+.retell-header,
 #question {
     text-align: center;
     background: var(--lightGreen);
     color: white;
     padding: 1rem;
+    font-weight: bold;
     margin: 0;
     grid-column: 1 / -1;
 }
@@ -86,7 +90,8 @@ body {
 .vidDiv,
 .start-body,
 .storyVideo,
-.quizBody {
+.quizBody,
+.retell-body {
     color: #555555;
     grid-column: 1 / -1;
     background: white;
@@ -107,8 +112,7 @@ video {
 }
 
 .btn,
-.startBtn,
-.choice {
+.startBtn {
     color: white;
     outline: none;
     margin: .9rem;
@@ -180,8 +184,9 @@ video {
 
 #progress {
     width: 2rem;
-    padding: 0 .5rem .5rem .5rem;
     display: flex;
+    padding: 0 .5rem .5rem .5rem;
+    margin-left: 4.5rem;
 }
 
 .prog {
@@ -193,35 +198,60 @@ video {
     margin: .2rem;
 }
 
+.choice {
+    padding: .5rem;
+}
 
-/* ------------ score --------------------- */
 
-#score {
-    margin: 20px auto;
-    background-color: white;
-    opacity: 0.8;
-    height: 100px;
-    width: 100px;
+/* ------------ Section-5: score--------------------- */
+
+.score {
+    position: absolute;
+    top: 8rem;
+    left: 3.3rem;
+    height: 45%;
+    opacity: 0.9;
     border-radius: 5px;
+    background-color: white;
     box-shadow: 0px 5px 15px 0px;
-    position: relative;
-    display: none;
+    text-align: center;
+    width: 16rem;
 }
 
-#score img {
-    position: absolute;
-    top: 100px;
-    left: 325px;
+.score img {
+    margin-top: 4rem;
 }
 
-#score p {
-    position: absolute;
-    display: block;
-    width: 59px;
-    height: 59px;
-    top: 130px;
-    left: 325px;
+.score p {
     font-size: 1.5em;
     font-weight: bold;
     text-align: center;
+    margin: 1rem;
+}
+
+.retell {
+    margin: 0 3rem;
+    padding: .5rem 2rem;
+}
+
+
+/* ------------ Section-6: RETELL--------------------- */
+
+.retell {
+    padding: 0;
+    margin: 0;
+}
+
+.reload-btn {
+    padding: 0;
+    grid-column: 1 / -1;
+}
+
+.retell-body {
+    font-size: 1rem;
+}
+
+.image {
+    margin-top: .4rem;
+    width: 95%;
 }
