create html code for amazona

--- a/projects/29-amazona/template/index.html
+++ b/projects/29-amazona/template/index.html
@@ -10,6 +10,23 @@
 
 <body>
     <!-- Started at 9AM/July27/2020 -->
+    <div class="grid-container">
+        <header class="header">
+            amazona
+        </header>
+        <main class="main">
+            <ul>
+                <li>Product 1</li>
+                <li>Product 2</li>
+                <li>Product 3</li>
+                <li>Product 4</li>
+                <li>Product 5</li>
+            </ul>
+        </main>
+        <footer class="footer">
+            All rights reserved.
+        </footer>
+    </div>
     <script src="script.js"></script>
 </body>
 
