style the header section

--- a/projects/29-amazona/template/index.html
+++ b/projects/29-amazona/template/index.html
@@ -12,7 +12,13 @@
     <!-- Started at 9AM/July27/2020 -->
     <div class="grid-container">
         <header class="header">
-            amazona
+            <div class="brand">
+                <a href="index.html">amazona</a>
+            </div>
+            <div class="header-links">
+                <a href="cart.html">Cart</a>
+                <a href="signin.html">Sign in</a>
+            </div>
         </header>
         <main class="main">
             <ul>
