--- a/projects/29-amazona/template/style.css
+++ b/projects/29-amazona/template/style.css
@@ -15,16 +15,41 @@ body {
     grid-template-areas: "header" "main" "footer";
     grid-template-columns: 1fr;
     grid-template-rows: 5rem 1fr 5rem;
+    height: 100%;
 }
+
+
+/* HEADER ------------------------------- */
 
 .header {
     grid-area: header;
+    background-color: #203040;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
 }
+
+.brand a {
+    color: #ffffff;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.header-links a {
+    color: #ffffff;
+}
+
+
+/* MAIN --------------------------------- */
 
 .main {
     grid-area: main;
 }
 
+
+/* FOOTER --------------------------------- */
+
 .footer {
     grid-area: footer;
+    background-color: #203040;
 }
